# QuickTab_DemoVersion

./: DRAFT_firestore.rules  README.md  firebase-applet-config.json  firebase-blueprint.json  metadata.json  next.config.ts  package-lock.json  package.json
.github/workflows/: release.yml
app/: globals.css  layout.tsx  page.tsx
components/: CreditLedger.tsx  FloorPlan.tsx  LandingPage.tsx  Management.tsx  POSBilling.tsx  POSCart.tsx
lib/: db-seed.ts  firebase.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
