[package]
name = "cafe-pos-credit-ledger"
version = "0.1.0"
description = "A fully functional POS billing, floor plan, and customer credit ledger system for cafes and restaurants."
authors = ["Pratik Bhandari <pratikbhandari110@gmail.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
